--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,5 +7,31 @@
         <a href="" class="android-link mdl-typography--font-light">Customise your phone</a>
       </p>
     </div>
+	
+	
     <div class="android-customized-section-image"></div>
+	
+	<div class="android-customized-section-text">
+      <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">How to Run the Application</div>
+      <p class="mdl-typography--font-light">
+        
+
+		Download the code using Source Tree<br/>
+		<a href="https://github.com/fareed543/Angular-Reactive-Forms">https://github.com/fareed543/Angular-Reactive-Forms</a>
+
+	  </p>
+	   <p class="mdl-typography--font-light">
+		open the root directory and using cmd run command <b>npm install</b> <br/>
+			it will download the library files of angular<br/>
+<br/>
+		After that run command <b>ng serve</b> <br/>
+			it will run the application <br/>
+	<br/>		
+		For Deployment  run command <b>ng build</b><br/>
+	   For Production Deployment run command <b>ng build --prod</b><br/>
+	For sub folder deployment run commnad <b>ng build --base-href="site.com/folder-name</b><br/>
+        <br>
+        <a href="" class="android-link mdl-typography--font-light">Customise your phone</a>
+      </p>
+    </div>
   </div>
