--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
             <nav class="android-navigation mdl-navigation">
               <a class="mdl-navigation__link mdl-typography--text-uppercase" routerLink="">Home</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" routerLink="about">About</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" routerLink="services">Services</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" routerLink="products">Products</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" routerLink="form">Form</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" routerLink="contact">Contact</a>
             </nav>
