--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="logo-font android-slogan"> {{ title }}</div>
     <div class="logo-font android-sub-slogan"> Stuff I've learnt and stuff I like</div>
     <div class="logo-font android-create-character">
-      <a href="https://github.com/fareed543/Angular5"><i class="material-icons">settings_ethernet</i> Download the code for Free.</a>
+      <a href="https://github.com/fareed543/Angular-Reactive-Forms"><i class="material-icons">settings_ethernet</i> Download the code for Free.</a>
     </div>
 
     <a href="#screens">
